--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,24 +5,51 @@ driver:
   name: vagrant
   provider:
     name: virtualbox
+platforms:
+  - name: rhel8
+    box: generic/rhel8
+    pre_build_image: true
+    memory: 2048
+    cpus: 2
+    config_options:
+      ssh.keep_alive: yes
+      ssh.remote_user: "'vagrant'"
+  - name: debian11
+    box: generic/debian11
+    pre_build_image: true
+    memory: 2048
+    cpus: 2
+    config_options:
+      ssh.keep_alive: yes
+      ssh.remote_user: "'vagrant'"
+provisioner:
+  name: ansible
+  inventory:
+    host_vars:
+      # # Inventory used for Molecule when executing the Ansible role tested.     
+      instance:
+        variable1: value
+        variable2: False
 lint: |
   set -e
   yamllint .
   ansible-lint
-platforms:
-  - name: debian11
-    image: "geerlingguy/debian11"
-  - name: rockylinux8
-    image: "geerlingguy/rockylinux8"
-provisioner:
-  name: ansible
-  lint: |
-    set -e
-    yamllint .
-    ansible-lint
+scenario:
+  test_sequence:
+    - dependency
+    - lint
+    - cleanup
+    - destroy
+    - syntax
+    - create
+    - prepare
+    - converge
+    - idempotence
+    - verify
+    - cleanup
+    - destroy
 verifier:
-  name: ansible
-  lint: |
-    set -e
-    yamllint .
-    ansible-lint
+  name: testinfra
+  options:
+    sudo: true
+    v: 1
